--- a/Security/Fundamentals/Security_Principles.mediawiki
+++ b/Security/Fundamentals/Security_Principles.mediawiki
@@ -85,8 +85,8 @@ Changes are detailed in the [https://github.com/mozilla/wikimo_opsec/commits/mas
 * Encrypt credentials storage databases (Ansible Vault, CredStash, etc.)
 * Encrypt traffic in transit (TLS).
 
-''Do not'''
-* Terminate TLS for all services in one location, then transmit the information in clear-text in the rest of the network.
+'''Do not'''
+* Terminate TLS for all services in a single location at the network edge and transmit the information in clear-text in the rest of the network (encrypt end to end instead).
 * Use STARTTLS without also disabling clear-text connections.
 
 = Know Thy System =
